updated to handle off screen issues

--- a/src/components/ToolTip/tooltip.scss
+++ b/src/components/ToolTip/tooltip.scss
@@ -5,6 +5,7 @@
   padding: 10px;
   text-decoration: underline;
   cursor: pointer;
+  margin-left: 0px;
 }
 
 .tool-tip-window {
@@ -12,11 +13,12 @@
   flex-direction: column;
   box-shadow: 0 1px 4px -1px black;
   max-width: 270px;
+  min-width: 270px;
   margin-top: 20px;
 
   &.hidden {
     visibility: hidden;
-    
+
   }
 
   .tool-tip-header {
@@ -27,7 +29,7 @@
   .top-arrow {
     position: absolute;
     top: -15px;
-    left: 47%;
+    left: 0px;
     text-shadow: 0px -2px 2px rgba(150, 150, 150, 0.49);
     color: white;
   }
